# data_providers

./: README.md  build.pipeline.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
data_providers/: __init__.py  dummy.py
data_providers/cryptos/: crypto_data.py  cryptocurrencies
data_providers/cryptos/unit_tests/: test_dummy.py
data_providers/stocks/: accounting_data.py  action_data.py  analysis_data.py  analysts_data.py  financial_data.py  historical_data.py  holders_data.py  info_data.py  news_data.py  options_data.py  recommendation_data.py  recommendations_data.py  sustainability_data.py  ticker_data.py
data_providers/stocks/unit_tests/: manual_run.py  test_accounting_data.py  test_action_data.py  test_analysts_data.py  test_dummy.py  test_financial_data.py  test_historical_data.py  test_holders_data.py  test_info_data.py  test_news_data.py  test_options_data.py  test_recommendations_data.py  test_sustainability_data.py  test_ticker_data.py
data_providers/unit_tests/: test_accounting_data.py  test_action_data.py  test_analysts_data.py  test_dummy.py  test_financial_data.py  test_historical_data.py  test_holders_data.py  test_news_data.py  test_recommendations_data.py
financial_data/: dummy.py  requirements.txt
