[project]
name = "data_providers"
version = "0.1"
description = "Contains hooks to data providers"
readme = "README.md"
authors = [{name = "Frederic Marechal"}]
requires-python = ">=3.9"
dependencies = [
   "dlt==1.3.0","coverage==7.6.1","pytest==8.3.3","psutil==6.1.0","setuptools==75.3.0","ruff==0.8.4","black==24.10.0","isort==5.13.2"
]




